--- a/trainbooking-startDate/mytrain/css/freelancer.css
+++ b/trainbooking-startDate/mytrain/css/freelancer.css
@@ -490,6 +490,15 @@ footer {
     -moz-box-shadow: 0px -3px 5px 1px rgba(0, 0, 0, 0.75);
     box-shadow: 0px -3px 5px 1px rgba(0, 0, 0, 0.75);
 }
-a:hover{
-    color:#42636B !important;
+
+a:hover {
+    color: #42636B !important;
+}
+
+.specialText {
+    color: #ff0000;
+}
+
+.smallFont {
+    font-size: 16px;
 }
